--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@fontsource/gfs-neohellenic": "^4.5.8",
+    "@fontsource/libre-baskerville": "^4.5.10",
     "@fontsource/open-sans": "^4.5.13",
     "@fontsource/raleway": "^4.5.11",
     "@nuxt/content": "^1.15.1",
